<resources>
    <string name="app_name">OSMfocus Reborn</string>
    <string name="map_screen_title">Map</string>
    <string name="settings">Settings</string>
    <string name="base_map_default">OpenStreetMap Carto (Default)</string>
    <string name="base_map_carto_belgium">OpenStreetMap Carto Belgium</string>
    <string name="base_map_cartodb_voyager_w_labels">CartoDB Voyager w/ labels</string>
    <string name="base_map_cartodb_voyager_wo_labels">CartoDB Voyager w/o labels</string>
    <string name="base_map_cartodb_positron_w_labels">CartoDB Positron w/ labels</string>
    <string name="base_map_cartodb_positron_wo_labels">CartoDB Positron w/o labels</string>
    <string name="base_map_cartodb_dark_matter_w_labels">CartoDB Dark Matter w/ labels</string>
    <string name="base_map_cartodb_dark_matter_wo_labels">CartoDB Dark Matter w/o labels</string>
    <string name="map_data_openstreetmap_contributors">Map data © OpenStreetMap contributors</string>
    <string name="add_user_base_map_name_hint">My base map</string>
    <string name="add_user_base_map_url_template_hint">https://a.tile.example.org/</string>
    <string name="add_base_map_add">Add</string>
    <string name="add_base_map_cancel">Cancel</string>
    <string name="add_user_base_map_name">Name</string>
    <string name="add_user_base_map_base_url">URL</string>
    <string name="add_user_base_map_base_url_info">
        Zoom, x, and y get appended after the trailing slash like \"{z}/{x}/{y}\".
        If the tile server uses subdomains (commonly \'a\', \'b\', \'c\'…) and using the base domain
        does not work, try prepending any of these subdomains.
        \n
        \nFor more information about tile servers, see wiki.openstreetmap.org/wiki/Tile_servers .
    </string>
    <string name="add_user_base_map_file_ending">File ending</string>
    <string name="add_user_base_map_file_ending_hint">.png</string>
    <string name="add_user_base_map_max_zoom">Maximum zoom level</string>
    <string name="add_user_base_map_max_zoom_hint">18</string>
    <string name="add_user_base_map_max_zoom_err_number">Must be a whole number</string>
    <string name="add_user_base_map_max_zoom_err_too_small">Must be at least 0</string>
    <string name="add_user_base_map_max_zoom_err_too_big">Must be at least most 25</string>
    <string name="user_base_maps_add_btn_description">Add base map</string>
    <string name="base_maps_screen_title">Manage Base Maps</string>
    <string name="add_user_base_map_screen_title">Add Base Map</string>
    <string name="base_maps_title_builtin">Built-in</string>
    <string name="base_maps_title_user">Own</string>
    <string name="base_maps_user_none">You don\'t have any custom base maps yet. Add one using the bottom-right + button.</string>
    <string name="setting_title_base_map">Base Map</string>
    <string name="add_user_base_map_url_template_err_blank">Enter a URL Template</string>
    <string name="add_user_base_map_url_template_err_syntax">Must be a valid URL</string>
    <string name="add_user_base_map_url_template_err_http">Must be a http(s) URL</string>
    <string name="add_user_base_map_name_err_blank">Enter a name</string>
    <string name="map_location_btn_description">Move map to current location</string>
    <string name="map_settings_btn_description">Open app settings</string>
    <string name="source_code">Source code</string>
    <string name="title_about">About</string>
    <string name="more_info">More info</string>
    <string name="app_info_dialog_title">App info</string>
    <string name="app_info_dialog_text">
        <![CDATA[
        <h2>This app</h2>
        <p>OSMfocus Reborn is an app to examine OpenStreetMap (OSM) elements and "focus" your view
            of the map.</p>
        <p>Written in Kotlin using Android Jetpack.</p>
        <p>Licensed under the <a href="https://github.com/ubipo/osmfocus/blob/master/LICENSE">"Apache
            License 2.0"</a>.</p>

        <h2>Fork notice</h2>
        <p>This app is a complete re-write of the now (07-11-2020) defunct <a
            href="https://github.com/MichaelVL/osm-focus">OSMfocus by Network42 / MichaelVL</a>.</p>

        <h2>License notices</h2>
        <p>OSMFocus Reborn allows you to view OpenStreetMap data. This data is <a
            href="https://www.openstreetmap.org/copyright">© (Copyright) OpenStreetMap
            contributors</a> and is available under the <a
            href="https://opendatacommons.org/licenses/odbl/">Open Database License</a>.</p>
        <p>OSMFocus Reborn uses (remixed) names and ideas from OSMFocus (MichaelVL) v0.1.1r1, which
            is available under the <a
                href="https://github.com/MichaelVL/osm-focus/blob/master/LICENSE">&quot;Apache
                License 2.0&quot;</a>.</p>
        <p>OSMFocus Reborn uses a remixed version of the OpenStreetMap logo, as per the <a
            href="https://wiki.osmfoundation.org/wiki/Trademark_Policy">Trademark Policy §3.5</a>.
        </p>
        <p>OSMFocus Reborn allows you to view map tiles from (but does not rely on) third-party and
            potentially non-free services.</p>

        <h2>Libraries</h2>
        Among others:
        <ul>
            <li><a href="https://github.com/osmdroid/osmdroid">osmdroid</a>: slippy map</li>
            <li><a href="https://github.com/locationtech/jts">JTS</a>: Java Topology Suite</li>
            <li><a href="https://github.com/kittinunf/fuel">Fuel</a>: HTTP networking for Kotlin</li>
            <li><a href="https://github.com/ocpsoft/prettytime">prettytime</a>: Date and Time Formatting</li>
        </ul>
        ]]>
    </string>
    <string name="more_info_second_line">Notices, license</string>
    <string name="source_code_second_line">Git repository for this app</string>
    <string name="issues">Issues / improvements</string>
    <string name="issues_second_line">Found a bug or some missing functionality?</string>
    <string name="about_second_line">Issues, suggestions, notices…</string>
    <string name="about">About</string>
    <string name="error_reporter_title">An error occurred</string>
    <string name="error_reporter_body_pre">OSMfocus Reborn couldn\'t recover from the following error: </string>
    <string name="error_reporter_body_post">You can help to improve the application by reporting this error on GitHub or via email. The full error information will be included in this report.</string>
    <string name="stack_trace_dumped_to">The full error information was saved to \'%1$s\'.</string>
    <string name="setting_title_tagbox_long_lines">Long lines in tagboxes</string>
    <string name="setting_tagbox_long_lines_ellipsize">Ellipsize</string>
    <string name="setting_tagbox_long_lines_wrap">Wrap</string>
    <string name="tagbox_long_lines_edit_dialog_title">Long lines in tagboxes</string>
    <string name="setting_filter_elements">Filter elements</string>
    <string name="setting_filter_elements_all">All elements</string>
    <string name="setting_filter_elements_custom">Custom filters configured</string>
    <string name="setting_filter_elements_dialog_title">Filter elements</string>
    <string name="setting_filter_elements_format">One filter per line. Use \'-\' to invert:</string>
    <string name="setting_filter_elements_examples">key=value\nkey\nsource:*=*GRB*\n-building=dormitory</string>
    <string name="setting_show_notes">Show notes</string>
    <string name="setting_show_notes_shown">Shown</string>
    <string name="setting_show_notes_hidden">Hidden</string>
    <string name="setting_show_relations">Show relations</string>
    <string name="setting_show_relations_shown">Shown</string>
    <string name="setting_show_relations_hidden">Hidden</string>
    <string name="setting_show_ways">Show ways</string>
    <string name="setting_show_ways_shown">Shown</string>
    <string name="setting_show_ways_hidden">Hidden</string>
    <string name="setting_show_nodes">Show nodes</string>
    <string name="setting_show_nodes_shown">Shown</string>
    <string name="setting_show_nodes_hidden">Hidden</string>
    <string name="too_zoomed_out">Zoom in to view data</string>
    <string name="setting_zoom_beyond_base_map_max_enabled">Enabled</string>
    <string name="setting_zoom_beyond_base_map_max_disabled">Disabled</string>
    <string name="allow_rotating_map_enabled">Enabled</string>
    <string name="allow_rotating_map_disabled">Disabled</string>
    <string name="setting_zoom_beyond_base_map_max">Zoom beyond basemap max</string>
    <string name="setting_allow_rotating_map">Rotate map with gesture</string>
    <string name="view_on_openstreetmap_org">View on openstreetmap.org</string>
    <string name="open_geo_uri">Open geo: link (Google Maps, Waze, Vespucci…)</string>
    <string name="open_in_osmand">Open in OsmAnd</string>
    <string name="add_note_here">Add a note here</string>
    <string name="copy_coordinates">Copy coordinates</string>
    <string name="something_copied">%1$s copied!</string>
    <string name="tag_table_header_key">Key</string>
    <string name="tag_table_header_value">Value</string>
    <string name="tag_table_header_wiki">Wiki</string>
    <string name="osm_wiki">OSM A</string>
    <string name="last_edit_date"><![CDATA[
        Last edited %1$s <small>(%2$s)</small>
    ]]></string>
    <string name="created_date"><![CDATA[
        Created %1$s <small>(%2$s)</small>
    ]]></string>
    <string name="last_edit_date_unknown"><![CDATA[
        Last edited <i>an unknown time ago</i>
    ]]></string>
    <string name="by_x"><![CDATA[
         …by <a href="%1$s">%2$s</a>
    ]]></string>
    <string name="by_unknown"><![CDATA[
         …by <i>anonymous</i>
    ]]></string>
    <string name="last_edit_changeset"><![CDATA[
        …as part of changeset <a href="%1$s">%2$s</a>.
    ]]></string>
    <string name="last_edit_changeset_unknown"><![CDATA[
        …as part of changeset ???.
    ]]></string>
    <string name="app_version">App version</string>
    <string name="app_version_second_line">Current version, build type</string>
    <string name="create_github_issue">Create GitHub Issue</string>
    <string name="send_email">Send Email</string>
    <string name="cancel">Cancel</string>
    <string name="version_info_field_version">Version</string>
    <string name="version_info_field_version_code">Version code</string>
    <string name="version_info_field_build_type">Build type</string>
    <string name="version_info_field_flavor">Build flavor</string>
    <string name="app_version_dialog_title">App version</string>
    <string name="actions_for_coordinate">Actions for %1$s</string>
    <string name="intent_oauth_callback">Callback for openstreetmap.org authentication</string>
    <string name="copy_coordinates_clipboard_label">Coordinates</string>
    <string name="create_note_title">Create note</string>
    <string name="create_note_text_label">Note text</string>
    <string name="osm_login_confirm_dialog_title">Log in to OpenStreetMap.org?</string>
    <string name="osm_login_confirm_dialog_message">You need to login to OpenStreetMap.org to %1$s.</string>
    <string name="osm_login_reason_notes">create notes</string>
    <string name="osm_login_confirm_dialog_log_in">Log in</string>
    <string name="osm_login_confirm_dialog_cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="comment_user"><![CDATA[<a href="%1$s">%2$s</a>]]></string>
    <string name="reopened">Reopened by %1$s</string>
    <string name="reopened_anonymous">Reopened</string>
    <string name="closed">Closed by %1$s</string>
    <string name="closed_anonymous">Closed</string>
    <string name="commented">Comment from %1$s</string>
    <string name="commented_anonymous"><![CDATA[Comment from <i>anonymous</i>]]></string>
    <string name="hidden">Hidden by %1$s</string>
    <string name="hidden_anonymous">Hidden</string>
    <string name="restart">Restart</string>
</resources>