<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="net.pfiers.osmfocus.viewmodel.ExceptionVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/error_reporter_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBottom_toTopOf="@id/bodyPre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bodyPre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:text="@string/error_reporter_body_pre"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@id/errorMsg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <!--        <ScrollView-->
        <!--            android:id="@+id/errorMsg"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="24dp"-->
        <!--            android:layout_marginTop="12dp"-->
        <!--            android:layout_marginEnd="24dp"-->
        <!--            android:minHeight="0dp"-->
        <!--            app:layout_constrainedHeight="true"-->
        <!--            app:layout_constrainedWidth="true"-->
        <!--            app:layout_constraintBottom_toTopOf="@id/bodyPost"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/bodyPre">-->

        <!--            <HorizontalScrollView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content">-->


        <!--            </HorizontalScrollView>-->

        <!--        </ScrollView>-->

        <ScrollView
            android:id="@+id/errorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:minHeight="0dp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/dumpFileMsg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bodyPre">

            <TextView
                android:id="@+id/errorMsgTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#EFEFEF"
                android:padding="6dp"
                android:text="@{vm.errorMessage}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:breakStrategy="high_quality"
                android:textIsSelectable="true"
                android:textSize="12sp"
                android:typeface="monospace"
                tools:text="Lllllllooooooooooooooong llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllooooong maaaaaan oo\n\n\\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\nfadssfd" />

        </ScrollView>

        <TextView
            android:id="@+id/dumpFileMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:text="@{@string/stack_trace_dumped_to(vm.dumpFilePath)}"
            android:visibility="@{vm.dumpFilePath != null}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@id/bodyPost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorMsg" />

        <TextView
            android:id="@+id/bodyPost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:text="@string/error_reporter_body_post"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@id/gitHubBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dumpFileMsg" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gitHubBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.createGitHubIssue()}"
            android:text="@string/create_github_issue"
            app:layout_constraintBottom_toTopOf="@id/emailBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bodyPost" />

        <Button
            android:id="@+id/emailBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.sendEmail()}"
            android:text="@string/send_email"
            app:layout_constraintBottom_toTopOf="@id/dismissBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gitHubBtn" />

        <Button
            android:id="@+id/dismissBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.cancel()}"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailBtn" />

        <Button
            android:id="@+id/restartButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.restart()}"
            android:text="@string/restart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@id/emailBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
